@@ -34,9 +34,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     Sccsid: @(#)nail.1	2.252 (gritter) 10/13/04
+.\"     Sccsid: @(#)nail.1	2.254 (gritter) 10/19/04
 .\"
-.TH NAIL 1 "10/13/04" "nail 11.12" "User Commands"
+.TH NAIL 1 "10/19/04" "nail 11.12" "User Commands"
 .SH NAME
 nail \- send and receive Internet mail
 .SH SYNOPSIS
@@ -1076,6 +1076,11 @@ The supported protocols are currently
 and
 .B pop3s
 (POP3 with SSL/TLS encryption).
+If
+.I user
+contains special characters like `/', `@', or `%',
+they must be escaped in URL notation,
+like `%2F', `%40', or `%25'.
 The optional
 .I file
 part applies to IMAP only;
